--- a/profileAws/index.html
+++ b/profileAws/index.html
@@ -1,101 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Rohit Patel | Senior Full Stack Developer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!-- Navbar -->
-    <nav>
-      <h2 class="logo">Rohit</h2>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Work</a></li>
-        <li><a href="#contact" class="btn">Hire Me</a></li>
-      </ul>
-    </nav>
+<head>
+  <meta charset="UTF-8" />
+  <title>Rohit Patel | Senior Full Stack & DevOps Engineer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Hero -->
-    <section id="home" class="hero">
-      <div class="hero-left">
-        <h1>Rohit Patel</h1>
-        <h3>Full Stack Developer</h3>
-        <p>PHP • Laravel • Node • React • Shopify Apps • DevOps</p>
-        <button onclick="scrollToSection('contact')">Contact Me</button>
-      </div>
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="style.css" />
+</head>
 
-      <div class="hero-right">
-        <img src="images/profile.jpg" alt="Rohit Patel" />
-      </div>
-    </section>
+<body>
 
-    <!-- About -->
-    <section id="about" class="glass reveal">
-      <h2>About Me</h2>
-      <p>
-        I am a results-driven Full Stack Developer with strong experience in
-        PHP, Laravel, Node.js, React, and Shopify public app development. I
-        build fast, secure, and scalable applications.
-      </p>
-    </section>
+<!-- Navbar -->
+<nav>
+  <h2>Rohit</h2>
+  <ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#skills">Skills</a></li>
+    <li><a href="#devops">DevOps</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#contact" class="btn">Hire Me</a></li>
+  </ul>
+</nav>
 
-    <!-- Skills -->
-    <section id="skills" class="reveal">
-      <h2>Skills</h2>
-      <div class="skills">
-        <span>HTML</span>
-        <span>CSS</span>
-        <span>JavaScript</span>
-        <span>PHP</span>
-        <span>Laravel</span>
-        <span>Node.js</span>
-        <span>React</span>
-        <span>MySQL</span>
-        <span>Git</span>
-        <span>GitHub</span>
-        <span>GitLab</span>
-        <span>Shopify Apps</span>
-        <span>DevOps</span>
-      </div>
-    </section>
+<!-- Hero -->
+<section id="home" class="hero">
+  <div class="hero-left">
+    <h1>Rohit Patel</h1>
+    <h3>Senior Full Stack Developer & DevOps Engineer</h3>
+    <p>PHP • Laravel • Node.js • React • Shopify Apps • AWS • CI/CD</p>
+    <button onclick="scrollToSection('contact')">Contact Me</button>
+  </div>
 
-    <!-- Projects -->
-    <section id="projects" class="reveal">
-      <h2>Projects</h2>
-      <div class="projects">
-        <div class="project">
-          <h3>Shopify BOGO App</h3>
-          <p>Advanced public app with custom rules & cart logic.</p>
-        </div>
-        <div class="project">
-          <h3>Laravel CRM</h3>
-          <p>Enterprise CRM with role-based access.</p>
-        </div>
-        <div class="project">
-          <h3>Node REST API</h3>
-          <p>JWT secured and optimized REST services.</p>
-        </div>
-      </div>
-    </section>
+  <div class="hero-right">
+    <img src="images/profile.jpg" alt="Rohit Patel">
+  </div>
+</section>
 
-    <!-- Contact -->
-    <section id="contact" class="glass reveal">
-      <h2>Contact</h2>
-      <p>Email: rohit@example.com</p>
-      <p>GitHub: github.com/rohitpatel</p>
-      <p>LinkedIn: linkedin.com/in/rohitpatel</p>
-    </section>
+<!-- About -->
+<section id="about" class="glass reveal">
+  <h2>About Me</h2>
+  <p>
+    I am a results-driven Senior Full Stack Developer with strong experience in
+    PHP, Laravel, Node.js, React, and Shopify public apps. I also manage
+    production servers, CI/CD pipelines, and cloud infrastructure.
+  </p>
+</section>
 
-    <footer>© 2025 Rohit Patel — Advanced Portfolio</footer>
+<!-- Skills -->
+<section id="skills" class="reveal">
+  <h2>Core Skills</h2>
+  <div class="skills">
+    <span>HTML</span><span>CSS</span><span>JavaScript</span>
+    <span>PHP</span><span>Laravel</span><span>Node.js</span>
+    <span>React</span><span>MySQL</span>
+    <span>Shopify App Development</span>
+  </div>
+</section>
+
+<!-- DevOps -->
+<section id="devops" class="glass reveal">
+  <h2>DevOps & Cloud</h2>
+  <div class="skills">
+    <span>AWS EC2</span><span>S3</span><span>IAM</span>
+    <span>Docker</span><span>Jenkins</span>
+    <span>GitHub Actions</span><span>PM2</span>
+    <span>Nginx</span><span>Linux</span>
+    <span>DNS & SSL</span>
+  </div>
+</section>
+
+<!-- Projects -->
+<section id="projects" class="reveal">
+  <h2>Projects</h2>
+  <div class="projects">
+    <div class="project">
+      <h3>Shopify BOGO App</h3>
+      <p>Advanced public app with rules, billing, webhooks & cart logic.</p>
+    </div>
+    <div class="project">
+      <h3>Laravel CRM</h3>
+      <p>Role-based enterprise CRM with reporting & automation.</p>
+    </div>
+    <div class="project">
+      <h3>Cloud REST APIs</h3>
+      <p>Node.js APIs deployed on AWS with CI/CD pipelines.</p>
+    </div>
+  </div>
+</section>
+
+<!-- Contact -->
+<section id="contact" class="glass reveal">
+  <h2>Contact</h2>
+  <p>Email: rohit@example.com</p>
+  <p>GitHub: github.com/rohitpatel</p>
+  <p>LinkedIn: linkedin.com/in/rohitpatel</p>
+</section>
+
+<footer>
+  © 2025 Rohit Patel — Full Stack & DevOps Portfolio
+</footer>
+
 
     <script src="script.js"></script>
-  </body>
+
+</body>
 </html>
